cli/tests/snapshots/render__frame_20x5.snap
---
source: cli/tests/render.rs
expression: text_of(terminal.backend().buffer())
---
                    |
    Todos           |
                    |
                    |
                    |
