cli/tests/snapshots/render__frame_40x10_drops_the_sidebar.snap
---
source: cli/tests/render.rs
expression: text_of(terminal.backend().buffer())
---
                                        |
      Todos                    Created  |
                                        |
    ◯ buy milk                      1d  |
    ◯ call the plumber              5d  |
                                        |
                                        |
                                        |
   NORMAL   1/5 completed   ? for help  |
                                        |
