cli/tests/snapshots/render__frame_56x20_is_the_narrowest_screen_that_keeps_the_sidebar.snap
---
source: cli/tests/render.rs
expression: text_of(terminal.backend().buffer())
---
  All Todos                        │                    |
                                   │    Todos    Created|
  Projects                         │                    |
                                   │  ◯ buy milk        |
  # Work                           │  ◯ call the        |
    # Deep                         │    plumber         |
                                   │                    |
                                   │                    |
                                   │    # Work   Created|
                                   │                    |
                                   │  ◯ a               |
                                   │    deliberate      |
                                   │    ly long         |
                                   │    todo that       |
                                   │    has to          |
                                   │                    |
                                   │                    |
                                   │                    |
                                   │ NORMAL 1/5 complete|
                                   │                    |
