cli/tests/snapshots/render__frame_in_a_project_view_with_the_sidebar_focused.snap
---
source: cli/tests/render.rs
expression: text_of(terminal.backend().buffer())
---
  All Todos                        │                                            |
                                   │         # Work todos          Created      |
  Projects                         │                                            |
                                   │       ◯ a deliberately long       12d      |
  # Work                           │         todo that has to                   |
    # Deep                         │         wrap across more                   |
                                   │         than one line to                   |
                                   │         prove the scroll                   |
                                   │         model counts them                  |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │      NORMAL  0/1 completed ? for help      |
                                   │                                            |
