cli/tests/snapshots/render__frame_while_searching.snap
---
source: cli/tests/render.rs
expression: text_of(terminal.backend().buffer())
---
  All Todos                        │                                            |
                                   │         Todos                 Created      |
  Projects                         │                                            |
                                   │       ◯ call the plumber           5d      |
  # Work                           │       ◯ a deliberately long       12d      |
    # Deep                         │         todo that has to                   |
                                   │         wrap across more                   |
                                   │         than one line to                   |
                                   │         prove the scroll                   |
                                   │         model counts them                  |
                                   │                                            |
                                   │                                            |
                                   │         Completed                          |
                                   │                                            |
                                   │       ◉ ship the port         30d  2d      |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │                                            |
                                   │     /the                                   |
                                   │                                            |
                                   │      SEARCH       1/5 completed            |
                                   │                                            |
